add neighbour search